# entob

./: .gitignore  Makefile  README.md  pyproject.toml
entob/: __init__.py  integer.py  money.py  provider.py  util.py
examples/: container.py  money.py
mageclass/: __init__.py
tests/: test_attribute.py  test_describe.py  test_isinstance_with_generic.py  test_modified.py
