[tool.poetry]
name = "entob"
version = "0.1.0"
description = ""
authors = ["Mellonka <facemellon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"
ruff = "^0.4.4"
mypy = "^1.10.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
